--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "angular": "~1.4.*"
+    "angular": "~1.4.*",
+    "angular-route": "~1.4.*"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
