--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "angular": "~1.4.*",
     "angular-route": "~1.4.*",
     "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
     "express": "~4.13.1",
     "express-session": "~1.11.3",
     "nedb": "~1.1.2"
