--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "license": "MIT",
   "dependencies": {
     "angular": "~1.4.*",
+    "angular-animate": "~1.4.3",
     "angular-route": "~1.4.*",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "express": "~4.13.1",
     "express-session": "~1.11.3",
+    "material-design-lite": "~1.0.2",
     "nedb": "~1.1.2"
   },
   "devDependencies": {
