--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cookie-parser": "~1.3.5",
     "express": "~4.13.1",
     "express-session": "~1.11.3",
-    "material-design-lite": "~1.0.2",
+    "materialize-css": "~0.96",
     "nedb": "~1.1.2"
   },
   "devDependencies": {
