--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nedb": "~1.1.2"
   },
   "devDependencies": {
+    "angular-mocks": "~1.4.*",
     "gulp": "^3.9.0",
     "gulp-sass": "^2.0.3",
     "gulp-autoprefixer": "^2.3.1",
