--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "devDependencies": {
     "angular-mocks": "~1.4.*",
     "gulp": "^3.9.0",
-    "gulp-sass": "^2.0.3",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-sass": "^2.0.3",
+    "gulp-server-livereload": "^1.5.4",
     "gulp-tsd": "^0.0.4",
     "gulp-typescript": "^2.8.0",
     "tsd": "^0.6.3"
