--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "angular-mocks": "~1.4.*",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-delete-lines": "^0.0.7",
     "gulp-sass": "^2.0.3",
     "gulp-server-livereload": "^1.5.4",
     "gulp-tsd": "^0.0.4",
